--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
 <html lang="zh-CN">
 <head>
     <meta charset="utf-8">
-    <title>绫川星凛</title>
+    <title>Adsicmes の 个人页</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/AyagawaSeirin/homepage@latest/mdui/css/mdui.min.css">
     <link rel="stylesheet" href="/assets/css/main.css">
     <link rel="stylesheet" href="/assets/css/index.css">
-    <!-- <link rel="stylesheet" href="/assets/css/detaile.css"> -->
-    <link rel="stylesheet" href="https://at.alicdn.com/t/font_1625701_q2422cy34wn.css">
-    <link rel="icon" href="/assets/img/logo-circul-100.png">
+    <link rel="stylesheet" href="https://at.alicdn.com/t/font_8d5l8fzk5b87iudi.css">
+    <link rel="icon" href="/assets/img/logo-circle-100.png">
 
 </head>
 <body class="mdui-theme-primary-pink mdui-theme-accent-pink">
@@ -25,33 +24,40 @@
         <div class="mdui-col-xs-12 mdui-col-md-2">
             <div class="rin-left">
                 <div class="rin-logo">
-                    <img src="https://cdn.jsdelivr.net/gh/AyagawaSeirin/homepage@latest/assets/img/logo.jpg">
+                    <img src="assets/img/logo.png">
                 </div>
-                <div class="rin-left-title">綾&nbsp;川&nbsp;星&nbsp;凛</div>
-                <div class="rin-left-title2">AyagawaSeirin</div>
+                <div class="rin-left-title">没中文网名=w=</div>
+                <div class="rin-left-title2">Adsicmes Jebbey</div>
                 <div class="rin-left-slogan">「其生若浮，其死若休」</div>
 
-                <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize" href="https://owomoe.net/" target="_blank"><span class="iconfont iconBlog"></span> Blog</a>
+                <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize"
+                   href="https://owomoe.net/" target="_blank"><span class="iconfont iconBlog"></span> Blog</a>
 
-                <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize" href="https://wiki.owomoe.net/" target="_blank"><span class="iconfont iconwiki"></span> Wiki</a>
+                <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize"
+                   href="https://wiki.owomoe.net/" target="_blank"><span class="iconfont iconwiki"></span> Wiki</a>
 
-                <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize" href="https://diary.owomoe.net/" target="_blank"><span class="iconfont iconrizhi"></span> Diary</a>
+                <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize"
+                   href="https://diary.owomoe.net/" target="_blank"><span class="iconfont iconrizhi"></span> Diary</a>
 
-                <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize" href="https://owomoe.net/links" target="_blank"><span class="iconfont iconfriend"></span> Friends</a>
+                <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize"
+                   href="https://owomoe.net/links" target="_blank"><span class="iconfont iconfriend"></span> Friends</a>
 
-                <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize" href="https://owomoe.net/msg" target="_blank"><span class="iconfont iconCommentenable"></span> Discuss</a>
+                <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize"
+                   href="https://owomoe.net/msg" target="_blank"><span class="iconfont iconCommentenable"></span>
+                    Discuss</a>
 
-                <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize" href="https://owomoe.net/other/7.html" target="_blank"><span class="iconfont iconabout"></span> About</a>
+                <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize"
+                   href="https://owomoe.net/other/7.html" target="_blank"><span class="iconfont iconabout"></span> About</a>
             </div>
         </div>
         <div class="mdui-col-xs-12 mdui-col-md-10">
             <div class="mdui-card rin-card">
-<!--                <div class="rin-card-title">关于我</div>-->
+                <!--                <div class="rin-card-title">关于我</div>-->
                 <div class="rin-card-part" id="introduce" style="margin-top: 0;">
-                    <div class="rin-card-content mdui-typo">你好，这里是綾川星凛，普通的女生一枚~<br>
-                        坐标广东深圳，退役jk。对信息技术以及ACG文化感兴趣。<br>
+                    <div class="rin-card-content mdui-typo">你好，这里是Adsicmes，也有人叫我FrZ，普通的男生一名<br>
+                        坐标山东，对信息技术以及ACG文化感兴趣。<br>
                         更多关于咱的信息请<a href="https://owomoe.net/other/7.html" target="_blank" class="">点击这里</a>。<br>
-                        How lucky to meet you!<br>
+                        It's lucky to meet you!<br>
                     </div>
                 </div>
                 <!--        <div class="rin-tr"></div>-->
@@ -63,44 +69,45 @@
                                  mdui-tooltip="{content: '制作网站的能力:非常菜'}">
 
                                 <div class="rin-progress-title">
-                                    HTML/CSS
+                                    前端
                                 </div>
 
-                                <div class="mdui-progress">
-                                    <div class="mdui-progress-determinate" style="width: 15%;"></div>
-                                </div>
-
-                            </div>
-
-                            <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4"
-                                 mdui-tooltip="{content: '赞美世界上最好的语言的能力'}">
-                                <div class="rin-progress-title">
-                                    PHP
-                                </div>
-                                <div class="mdui-progress">
-                                    <div class="mdui-progress-determinate" style="width: 30%;"></div>
-                                </div>
-                            </div>
-
-                            <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4"
-                                 mdui-tooltip="{content: '现用现学的能力:我太蔡了'}">
-                                <div class="rin-progress-title">
-                                    JavaScript
-                                </div>
                                 <div class="mdui-progress">
                                     <div class="mdui-progress-determinate" style="width: 10%;"></div>
+                                </div>
+
+                            </div>
+
+                            <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4"
+                                 mdui-tooltip="{content: '胶水语言运用能力'}">
+                                <div class="rin-progress-title">
+                                    Python
+                                </div>
+                                <div class="mdui-progress">
+                                    <div class="mdui-progress-determinate" style="width: 95%;"></div>
+                                </div>
+                            </div>
+
+                            <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4"
+                                 mdui-tooltip="{content: '我太蔡了'}">
+                                <div class="rin-progress-title">
+                                    现学现用
+                                </div>
+                                <div class="mdui-progress">
+                                    <div class="mdui-progress-determinate" style="width: 15%;"></div>
                                 </div>
                             </div>
 
                         </div>
 
                         <div class="mdui-row">
-                            <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4" mdui-tooltip="{content: '真的非常可爱√'}">
+                            <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4"
+                                 mdui-tooltip="{content: '真的有点二次元√'}">
                                 <div class="rin-progress-title">
-                                    萌属性
+                                    二次元属性
                                 </div>
                                 <div class="mdui-progress">
-                                    <div class="mdui-progress-determinate" style="width: 95%;"></div>
+                                    <div class="mdui-progress-determinate" style="width: 70%;"></div>
                                 </div>
                             </div>
 
@@ -110,7 +117,7 @@
                                     搞事情
                                 </div>
                                 <div class="mdui-progress">
-                                    <div class="mdui-progress-determinate" style="width: 45%;"></div>
+                                    <div class="mdui-progress-determinate" style="width: 85%;"></div>
                                 </div>
                             </div>
 
@@ -120,7 +127,7 @@
                                     情感
                                 </div>
                                 <div class="mdui-progress">
-                                    <div class="mdui-progress-determinate" style="width: 85%;"></div>
+                                    <div class="mdui-progress-determinate" style="width: 65%;"></div>
                                 </div>
                             </div>
 
@@ -150,10 +157,10 @@
                             <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4"
                                  mdui-tooltip="{content: '对这个世界热爱的程度'}">
                                 <div class="rin-progress-title">
-                                    世界
+                                    合作意愿
                                 </div>
                                 <div class="mdui-progress">
-                                    <div class="mdui-progress-determinate" style="width: 2%;"></div>
+                                    <div class="mdui-progress-determinate" style="width: 75%;"></div>
                                 </div>
                             </div>
 
@@ -167,40 +174,37 @@
                     <div class="rin-card-title2 mdui-typo"><a href="#contact">#</a> 咱生活的地方</div>
 
                     <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue mdui-text-capitalize"
-                       href="https://twitter.com/AyagawaSeirin" target="_blank"><span
-                            class="iconfont icontwitter-fill"></span> Twitter</a>
+                       href="https://t.me/Adsicmes" target="_blank"><span class="iconfont icon-telegram"></span>
+                        Telegram</a>
+
+                    <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-black mdui-text-capitalize"
+                       href="https://github.com/Adsicmes" target="_blank"><span class="iconfont icon-github"></span>
+                        Github</a>
+
+                    <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-pink"
+                       href="http://wpa.qq.com/msgrd?v=3&uin=1483492332&site=qq&menu=yes"
+                       target="_blank" style="text-transform: none!important;">
+                        <span class="iconfont icon-QQ"></span> QQ</a>
+
+                    <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-pink mdui-text-capitalize"
+                       href="https://space.bilibili.com/87421321/" target="_blank"><span
+                            class="iconfont icon-bilibili-line"></span> Bilibili</a>
 
                     <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue mdui-text-capitalize"
-                       href="https://t.me/AyagawaSeirin" target="_blank"><span class="iconfont icontelegram"></span> Telegram</a>
-
-                    <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-black mdui-text-capitalize" href="https://github.com/AyagawaSeirin" target="_blank"><span class="iconfont icongithub"></span> Github</a>
-
-                    <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-pink" href="http://suki.house/"
-                       target="_blank" style="text-transform: none!important;"><span
-                            class="iconfont iconcoffe"></span> sukiHouse</a>
-
-                    <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-pink mdui-text-capitalize" href="https://space.bilibili.com/174471710" target="_blank"><span class="iconfont iconbilibili"></span> Bilibili</a>
-
-                    <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue mdui-text-capitalize"
-                       href="mailto:AyagawaSeirin@outlook.com" target="_blank"><span
-                            class="iconfont iconmail_fill"></span> Mail</a>
+                       href="mailto:Adsicmes@foxmail.com" target="_blank"><i
+                            class="iconfont icon-email-fill"></i> Mail</a>
 
                 </div>
 
                 <div class="rin-card-part" id="article">
-                    <div class="rin-card-title2 mdui-typo"><a href="#article">#</a> 文章</div>
+                    <div class="rin-card-title2 mdui-typo"><a href="#article">#</a> 待定</div>
 
                     <a target="_blank" href="https://owomoe.net/dev/175.html">
-                    <div class="mdui-card rin-card rin-card-article" style="margin-bottom: 10px;">
-                        <div class="rin-article-title">[总结]可以在中国大陆境内使用的境外手机卡资料整理</div>
-                        <div class="rin-article-content">众所周知，中国大陆+86手机卡需要实名认证，因此造成许多奇奇怪怪的麻烦。此文章总结了可以在中国大陆境内使用的境外实体手机卡，供大家参考。</div>
-                    </div>
-                    </a>
+                        <div class="mdui-card rin-card rin-card-article" style="margin-bottom: 10px;">
+                            <div class="rin-article-title">暂无</div>
+                            <div class="rin-article-content">
 
-                    <a target="_blank" href="https://owomoe.net/dev/113.html">
-                        <div class="mdui-card rin-card rin-card-article" style="margin-bottom: 5px;">
-                            <div class="rin-article-title">利用jsDelivr白嫖全球超高速静态资源访问服务！</div>
-                            <div class="rin-article-content">因为服务器在国外&服务器带宽小，导致静态资源请求速度慢，最终导致全站访问速度被拖慢，是站长们要面对的问题。最常用的解决方案是使用国内IDC厂商提供的对象存储(镜像回源)+CDN来提升静态资源访问速度，但这难免会产生费用。</div>
+                            </div>
                         </div>
                     </a>
                     <a class="rin-article-more" target="_blank" href="https://owomoe.net/">
@@ -211,24 +215,16 @@
 
 
                 <div class="rin-card-part" id="works">
-                    <div class="rin-card-title2 mdui-typo"><a href="#works">#</a> 作品</div>
+                    <div class="rin-card-title2 mdui-typo"><a href="#works">#</a> 待定</div>
 
                     <a target="_blank" href="https://github.com/AyagawaSeirin/UploadGithubForTypecho">
                         <div class="mdui-card rin-card rin-card-article" style="margin-bottom: 10px;">
-                            <div class="rin-article-title">UploadGithubForTypecho</div>
-                            <div class="rin-article-content">Typecho插件，将文章附件上传至Github，并使用jsDelivr进行文件访问加速。</div>
-                        </div>
-                    </a>
-                    <a target="_blank" href="https://github.com/AyagawaSeirin/BilibiliFollowPage">
-                        <div class="mdui-card rin-card rin-card-article" style="margin-bottom: 5px;">
-                            <div class="rin-article-title">BilibiliFollowPage</div>
-                            <div class="rin-article-content">基于handsome主题的B站追番列表独立页面作品</div>
-                        </div>
-                    </a>
-                    <a target="_blank" href="https://github.com/AyagawaSeirin/ThreebodySpace">
-                        <div class="mdui-card rin-card rin-card-article" style="margin-bottom: 5px;">
-                            <div class="rin-article-title">ThreebodySpace</div>
-                            <div class="rin-article-content">三体宇宙网站(threebody.space)</div>
+                            <div class="rin-article-title">
+                                暂无
+                            </div>
+                            <div class="rin-article-content">
+
+                            </div>
                         </div>
                     </a>
                     <a class="rin-article-more" target="_blank" href="https://github.com/AyagawaSeirin/">
@@ -241,13 +237,15 @@
                 <div class="rin-tr"></div>
 
                 <div class="rin-card-part" id="last">
-                    <div class="rin-card-title2">綾川星凛@AyagawaSeirin</div>
+                    <div class="rin-card-title2">Adsicmes Jebbey</div>
                     <div class="rin-card-content">一切都是命运石之门的选择，顺其自然吧</div>
                 </div>
 
                 <div class="rin-card-part" id="footer">
-                    <div class="rin-card-content">©2020 Seirin | Made with love by Seirin | BG: <a
-                            href="https://www.pixiv.net/artworks/56652667" id="bg-link" target="_blank">Pixiv</a></div>
+                    <div class="rin-card-content">©2022 Seirin | Made with love by Seirin | Modified with thankful heart
+                        by FrZ | BG: <a
+                                href="https://www.pixiv.net/artworks/76995599" id="bg-link" target="_blank">Pixiv</a>
+                    </div>
                 </div>
             </div>
         </div>
