--- a/index.html
+++ b/index.html
@@ -31,23 +31,7 @@
                 <div class="rin-left-slogan">「其生若浮，其死若休」</div>
 
                 <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize"
-                   href="https://owomoe.net/" target="_blank"><span class="iconfont iconBlog"></span> Blog</a>
-
-                <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize"
-                   href="https://wiki.owomoe.net/" target="_blank"><span class="iconfont iconwiki"></span> Wiki</a>
-
-                <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize"
-                   href="https://diary.owomoe.net/" target="_blank"><span class="iconfont iconrizhi"></span> Diary</a>
-
-                <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize"
-                   href="https://owomoe.net/links" target="_blank"><span class="iconfont iconfriend"></span> Friends</a>
-
-                <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize"
-                   href="https://owomoe.net/msg" target="_blank"><span class="iconfont iconCommentenable"></span>
-                    Discuss</a>
-
-                <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize"
-                   href="https://owomoe.net/other/7.html" target="_blank"><span class="iconfont iconabout"></span> About</a>
+                   href="https://blog.frzzmeow.icu/" target="_blank"><span class="iconfont iconBlog"></span> Blog</a>
             </div>
         </div>
         <div class="mdui-col-xs-12 mdui-col-md-10">
