--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <meta charset="utf-8">
     <title>Adsicmes の 个人页</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/AyagawaSeirin/homepage@latest/mdui/css/mdui.min.css">
+    <link rel="stylesheet" href="/mdui/css/mdui.min.css">
     <link rel="stylesheet" href="/assets/css/main.css">
     <link rel="stylesheet" href="/assets/css/index.css">
-    <link rel="stylesheet" href="https://at.alicdn.com/t/font_8d5l8fzk5b87iudi.css">
+    <link rel="stylesheet" href="/assets/iconfont/iconfont.css">
     <link rel="icon" href="/assets/img/logo-circle-100.png">
 
 </head>
@@ -31,7 +31,7 @@
                 <div class="rin-left-slogan">「其生若浮，其死若休」</div>
 
                 <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize"
-                   href="https://blog.frzzmeow.icu/" target="_blank"><span class="iconfont iconBlog"></span> Blog</a>
+                   href="https://blog.frzzmeow.icu/" target="_blank"><span class="iconfont icons-blog"></span> Blog</a>
             </div>
         </div>
         <div class="mdui-col-xs-12 mdui-col-md-10">
@@ -40,7 +40,7 @@
                 <div class="rin-card-part" id="introduce" style="margin-top: 0;">
                     <div class="rin-card-content mdui-typo">你好，这里是Adsicmes，也有人叫我FrZ，普通的男生一名<br>
                         坐标山东，对信息技术以及ACG文化感兴趣。<br>
-                        更多关于咱的信息请<a href="https://owomoe.net/other/7.html" target="_blank" class="">点击这里</a>。<br>
+<!--                        更多关于咱的信息请<a href="https://owomoe.net/other/7.html" target="_blank" class="">点击这里</a>。<br>-->
                         It's lucky to meet you!<br>
                     </div>
                 </div>
@@ -158,25 +158,25 @@
                     <div class="rin-card-title2 mdui-typo"><a href="#contact">#</a> 咱生活的地方</div>
 
                     <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue mdui-text-capitalize"
-                       href="https://t.me/Adsicmes" target="_blank"><span class="iconfont icon-telegram"></span>
+                       href="https://t.me/Adsicmes" target="_blank"><span class="iconfont icons-telegram"></span>
                         Telegram</a>
 
                     <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-black mdui-text-capitalize"
-                       href="https://github.com/Adsicmes" target="_blank"><span class="iconfont icon-github"></span>
+                       href="https://github.com/Adsicmes" target="_blank"><span class="iconfont icons-github"></span>
                         Github</a>
 
                     <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-pink"
                        href="http://wpa.qq.com/msgrd?v=3&uin=1483492332&site=qq&menu=yes"
                        target="_blank" style="text-transform: none!important;">
-                        <span class="iconfont icon-QQ"></span> QQ</a>
+                        <span class="iconfont icons-QQ"></span> QQ</a>
 
                     <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-pink mdui-text-capitalize"
                        href="https://space.bilibili.com/87421321/" target="_blank"><span
-                            class="iconfont icon-bilibili-line"></span> Bilibili</a>
+                            class="iconfont icons-bilibili-fill"></span> Bilibili</a>
 
                     <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue mdui-text-capitalize"
                        href="mailto:Adsicmes@foxmail.com" target="_blank"><i
-                            class="iconfont icon-email-fill"></i> Mail</a>
+                            class="iconfont icons-email-fill"></i> Mail</a>
 
                 </div>
 
