--- a/index.html
+++ b/index.html
@@ -181,17 +181,17 @@
                 </div>
 
                 <div class="rin-card-part" id="article">
-                    <div class="rin-card-title2 mdui-typo"><a href="#article">#</a> 待定</div>
+                    <div class="rin-card-title2 mdui-typo"><a href="#article">#</a> 文章</div>
 
                     <a target="_blank" href="https://owomoe.net/dev/175.html">
                         <div class="mdui-card rin-card rin-card-article" style="margin-bottom: 10px;">
-                            <div class="rin-article-title">暂无</div>
+                            <div class="rin-article-title">解决python opencv2在pycharm中没有代码提示的问题(不修改包文件)</div>
                             <div class="rin-article-content">
-
+                                在使用pycharm的时候总是很喜欢其强大的代码提示功能，只需ctrl+左键就可以查看源码，"."也能显示所含的函数，但是很多时候opencv的模块经常是失灵的......
                             </div>
                         </div>
                     </a>
-                    <a class="rin-article-more" target="_blank" href="https://owomoe.net/">
+                    <a class="rin-article-more" target="_blank" href="https://blog.frzzmeow.icu/">
                         Learn more...
                     </a>
 
