--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!--
  * AyagawaSeirin's Page
- * Last Update: 2020-02-05
  * GitHub: https://github.com/AyagawaSeirin/
  * Made with love by AyagawaSeirin [https://owomoe.net/]
  * 此个人主页运行于GithubPages，如果你也想使用，在我的公开仓库内即可找到源码。您可以任意修改，但请注明本原作者。
+
+ * 由 Adsicmes 修改使用，感谢原作者。
 -->
 <html lang="zh-CN">
 <head>
@@ -31,7 +32,12 @@
                 <div class="rin-left-slogan">「其生若浮，其死若休」</div>
 
                 <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize"
-                   href="https://blog.frzzmeow.icu/" target="_blank"><span class="iconfont icons-blog"></span> Blog</a>
+                   href="https://blog.frzzmeow.icu/" target="_blank">
+                    <span class="iconfont icons-blog"></span> Blog</a>
+
+                <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize"
+                   href="https://gitrepo.frzzmeow.icu/" target="_blank">
+                    <span class="iconfont icons-gitea"></span> 私人git库</a>
             </div>
         </div>
         <div class="mdui-col-xs-12 mdui-col-md-10">
