修改gitea按钮文字

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
                 <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize"
                    href="https://gitrepo.frzzmeow.icu/" target="_blank">
-                    <span class="iconfont icons-gitea"></span> 私人git库</a>
+                    <span class="iconfont icons-gitea"></span> 私人gitea</a>
             </div>
         </div>
         <div class="mdui-col-xs-12 mdui-col-md-10">
