添加项目栏一条项目

--- a/index.html
+++ b/index.html
@@ -205,15 +205,15 @@
 
 
                 <div class="rin-card-part" id="works">
-                    <div class="rin-card-title2 mdui-typo"><a href="#works">#</a> 待定</div>
+                    <div class="rin-card-title2 mdui-typo"><a href="#works">#</a> 项目</div>
 
                     <a target="_blank" href="https://github.com/AyagawaSeirin/UploadGithubForTypecho">
                         <div class="mdui-card rin-card rin-card-article" style="margin-bottom: 10px;">
                             <div class="rin-article-title">
-                                暂无
+                                pyAsakiMiruBot
                             </div>
                             <div class="rin-article-content">
-
+                                python写的为个人群组服务的bot
                             </div>
                         </div>
                     </a>
