--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="mdui-col-xs-12 mdui-col-md-2">
             <div class="rin-left">
                 <div class="rin-logo">
-                    <img src="https://web-cdn-storage.oss-accelerate.aliyuncs.com/homepage/logo.png">
+                    <img src="https://web-cdn-storage.oss-cn-hangzhou.aliyuncs.com/homepage/logo.png">
                 </div>
                 <div class="rin-left-title">没中文网名=w=</div>
                 <div class="rin-left-title2">Adsicmes Jebbey</div>
