略作更新，改为本地链接

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="mdui-col-xs-12 mdui-col-md-2">
             <div class="rin-left">
                 <div class="rin-logo">
-                    <img src="https://web-cdn-storage.oss-cn-hangzhou.aliyuncs.com/homepage/logo.png">
+                    <img src="assets/img/logo.png">
                 </div>
                 <div class="rin-left-title">没中文网名=w=</div>
                 <div class="rin-left-title2">Adsicmes Jebbey</div>
@@ -59,7 +59,7 @@
                                  mdui-tooltip="{content: '制作网站的能力:非常菜'}">
 
                                 <div class="rin-progress-title">
-                                    前端
+                                    语言能力: 前端
                                 </div>
 
                                 <div class="mdui-progress">
@@ -71,7 +71,7 @@
                             <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4"
                                  mdui-tooltip="{content: '胶水语言运用能力'}">
                                 <div class="rin-progress-title">
-                                    Python
+                                    语言能力: Python
                                 </div>
                                 <div class="mdui-progress">
                                     <div class="mdui-progress-determinate" style="width: 95%;"></div>
@@ -79,13 +79,16 @@
                             </div>
 
                             <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4"
-                                 mdui-tooltip="{content: '我太蔡了'}">
+                                 mdui-tooltip="{content: '正在学习'}">
+
                                 <div class="rin-progress-title">
-                                    现学现用
+                                    语言能力: Rust&Golang
                                 </div>
+
                                 <div class="mdui-progress">
-                                    <div class="mdui-progress-determinate" style="width: 15%;"></div>
+                                    <div class="mdui-progress-determinate" style="width: 10%;"></div>
                                 </div>
+
                             </div>
 
                         </div>
@@ -104,7 +107,7 @@
                             <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4"
                                  mdui-tooltip="{content: '让事情发生的能力'}">
                                 <div class="rin-progress-title">
-                                    搞事情
+                                    搞事能力
                                 </div>
                                 <div class="mdui-progress">
                                     <div class="mdui-progress-determinate" style="width: 85%;"></div>
@@ -137,7 +140,7 @@
                             <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4"
                                  mdui-tooltip="{content: '做事情的耐心程度'}">
                                 <div class="rin-progress-title">
-                                    耐心
+                                    定力
                                 </div>
                                 <div class="mdui-progress">
                                     <div class="mdui-progress-determinate" style="width: 60%;"></div>
@@ -155,6 +158,18 @@
                             </div>
 
 
+                        </div>
+
+                        <div class="mdui-row">
+                            <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4"
+                                 mdui-tooltip="{content: '我太蔡了'}">
+                                <div class="rin-progress-title">
+                                    现学现用
+                                </div>
+                                <div class="mdui-progress">
+                                    <div class="mdui-progress-determinate" style="width: 15%;"></div>
+                                </div>
+                            </div>
                         </div>
 
 
