--- a/index.html
+++ b/index.html
@@ -247,9 +247,8 @@
                 </div>
 
                 <div class="rin-card-part" id="footer">
-                    <div class="rin-card-content">©2022 Seirin | Made with love by Seirin | Modified with thankful heart
-                        by FrZ | BG: <a
-                                href="https://www.pixiv.net/artworks/76995599" id="bg-link" target="_blank">Pixiv</a>
+                    <div class="rin-card-content">©2022 Adsicmes | Made with love by Seirin | Modified with thankful heart
+                        by FrZ
                     </div>
                 </div>
             </div>
