--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <div class="rin-left-slogan">「其生若浮，其死若休」</div>
 
                 <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize"
-                   href="https://blog.frzzmeow.icu/" target="_blank">
-                    <span class="iconfont icons-blog"></span> Blog</a>
+                   href="https://chat.frzzmeow.icu/" target="_blank">
+                    <span class="iconfont icons-blog"></span> 没人的聊天室</a>
 
                 <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize"
                    href="https://gitrepo.frzzmeow.icu/" target="_blank">
