--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
                 <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize"
                    href="https://chat.frzzmeow.icu/" target="_blank">
-                    <span class="iconfont icons-blog"></span> 没人的聊天室</a>
+                    <span class="iconfont icons-discuss3f"></span> 没人的聊天室</a>
 
                 <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize"
                    href="https://gitrepo.frzzmeow.icu/" target="_blank">
