离大大大谱

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                         坐标山东，对信息技术以及ACG文化感兴趣。<br>
 <!--                        更多关于咱的信息请<a href="https://owomoe.net/other/7.html" target="_blank" class="">点击这里</a>。<br>-->
                         It's lucky to meet you!<br>
+                        有人说我是直男，其实我觉得我一点也不直(微笑)<br>
                     </div>
                 </div>
                 <!--        <div class="rin-tr"></div>-->
