--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
             <div class="mdui-card rin-card">
                 <!--                <div class="rin-card-title">关于我</div>-->
                 <div class="rin-card-part" id="introduce" style="margin-top: 0;">
-                    <div class="rin-card-content mdui-typo">你好，这里是Adsicmes，也有人叫我FrZ，普通的男生一名<br>
+                    <div class="rin-card-content mdui-typo">有缘看我主页的朋友你好，这里是Adsicmes，也有人叫我FrZ，普通的男生一名<br>
                         坐标山东，对信息技术以及ACG文化感兴趣。<br>
-<!--                        更多关于咱的信息请<a href="https://owomoe.net/other/7.html" target="_blank" class="">点击这里</a>。<br>-->
+                        不是现充，喜欢玩电脑，不喜欢手机<br>
                         It's lucky to meet you!<br>
                         有人说我是直男，其实我觉得我一点也不直(微笑)<br>
                     </div>
@@ -233,8 +233,11 @@
                             </div>
                         </div>
                     </a>
-                    <a class="rin-article-more" target="_blank" href="https://github.com/AyagawaSeirin/">
-                        Learn more...
+                    <a class="rin-article-more">
+                        Learn more
+                        <a  target="_blank" href="https://github.com/Adsicmes/">(Github)</a>
+                        <a  target="_blank" href="https://gitrepo.frzzmeow.icu/">(Private Gitrepo)</a>
+                        ...
                     </a>
 
                 </div>
