离大大大大大谱

--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
                     </a>
                     <a class="rin-article-more">
                         Learn more
-                        <a  target="_blank" href="https://github.com/Adsicmes/">(Github)</a>
-                        <a  target="_blank" href="https://gitrepo.frzzmeow.icu/">(Private Gitrepo)</a>
+                        <a class="rin-article-more" target="_blank" href="https://github.com/Adsicmes/">(Github)</a>
+                        <a class="rin-article-more" target="_blank" href="https://gitrepo.frzzmeow.icu/">(Private Gitrepo)</a>
                         ...
                     </a>
 
