离大大大大大大谱

--- a/index.html
+++ b/index.html
@@ -207,7 +207,9 @@
 
                     <a target="_blank" href="https://owomoe.net/dev/175.html">
                         <div class="mdui-card rin-card rin-card-article" style="margin-bottom: 10px;">
-                            <div class="rin-article-title">解决python opencv2在pycharm中没有代码提示的问题(不修改包文件)</div>
+                            <div class="rin-article-title">解决python
+                                opencv2在pycharm中没有代码提示的问题(不修改包文件)
+                            </div>
                             <div class="rin-article-content">
                                 在使用pycharm的时候总是很喜欢其强大的代码提示功能，只需ctrl+左键就可以查看源码，"."也能显示所含的函数，但是很多时候opencv的模块经常是失灵的......
                             </div>
@@ -233,12 +235,11 @@
                             </div>
                         </div>
                     </a>
-                    <a class="rin-article-more">
-                        Learn more
-                        <a class="rin-article-more" target="_blank" href="https://github.com/Adsicmes/">(Github)</a>
-                        <a class="rin-article-more" target="_blank" href="https://gitrepo.frzzmeow.icu/">(Private Gitrepo)</a>
-                        ...
-                    </a>
+                    <a class="rin-article-more">Learn more </a>
+                    <a class="rin-article-more" target="_blank" href="https://github.com/Adsicmes/">(Github)</a>
+                    <a class="rin-article-more" target="_blank" href="https://gitrepo.frzzmeow.icu/">(Private
+                        Gitrepo)</a>
+                    <a class="rin-article-more">...</a>
 
                 </div>
 
@@ -251,7 +252,8 @@
                 </div>
 
                 <div class="rin-card-part" id="footer">
-                    <div class="rin-card-content">©2022 Adsicmes | Made with love by Seirin | Modified with thankful heart
+                    <div class="rin-card-content">©2022 Adsicmes | Made with love by Seirin | Modified with thankful
+                        heart
                         by FrZ
                     </div>
                 </div>
