离大大大大大大大谱

--- a/index.html
+++ b/index.html
@@ -200,6 +200,10 @@
                        href="mailto:Adsicmes@foxmail.com" target="_blank"><i
                             class="iconfont icons-email-fill"></i> Mail</a>
 
+                    <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue mdui-text-capitalize"
+                       href="mailto:Adsicmes@foxmail.com" target="_blank"><i
+                            class="iconfont icons-a-osu-logo-white59d385da"></i> osu</a>
+
                 </div>
 
                 <div class="rin-card-part" id="article">
