离大大大大大大大谱

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/mdui/css/mdui.min.css">
     <link rel="stylesheet" href="/assets/css/main.css">
     <link rel="stylesheet" href="/assets/css/index.css">
-    <link rel="stylesheet" href="/assets/iconfont/iconfont.css">
+    <link rel="stylesheet" href="https://at.alicdn.com/t/font_8d5l8fzk5b87iudi.css">
     <link rel="icon" href="/assets/img/logo-circle-100.png">
 
 </head>
@@ -202,7 +202,7 @@
 
                     <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue mdui-text-capitalize"
                        href="mailto:Adsicmes@foxmail.com" target="_blank"><i
-                            class="iconfont icons-a-osu-logo-white59d385da"></i> osu</a>
+                            class="iconfont icons-a-osu-logo-white59d385da"></i> OSU</a>
 
                 </div>
 
