--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                             class="iconfont icons-email-fill"></i> Mail</a>
 
                     <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue mdui-text-capitalize"
-                       href="mailto:Adsicmes@foxmail.com" target="_blank"><i
+                       href="https://osu.ppy.sh/users/11350021" target="_blank"><i
                             class="iconfont icons-a-osu-logo-white59d385da"></i> OSU</a>
 
                 </div>
