离大大大大大大大大大谱

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                        target="_blank" style="text-transform: none!important;">
                         <span class="iconfont icons-QQ"></span> QQ</a>
 
-                    <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-pink mdui-text-capitalize"
+                    <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-white mdui-text-capitalize"
                        href="https://space.bilibili.com/87421321/" target="_blank"><span
                             class="iconfont icons-bilibili-fill"></span> Bilibili</a>
 
@@ -200,7 +200,7 @@
                        href="mailto:Adsicmes@foxmail.com" target="_blank"><i
                             class="iconfont icons-email-fill"></i> Mail</a>
 
-                    <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue mdui-text-capitalize"
+                    <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-black mdui-text-capitalize"
                        href="https://osu.ppy.sh/users/11350021" target="_blank"><i
                             class="iconfont icons-a-osu-logo-white59d385da"></i> OSU</a>
 
